--- a/.env
+++ b/.env
@@ -16,3 +16,6 @@ CLIENT_URL=http://localhost:5173
 API_GATEWAY_URL = https://gateway.jjm-manufacturing.com
 SERVICE_JWT_SECRET= srvcScrt4o341
 GATEWAY_JWT_SECRET= gtwyScrt5o53
+
+
+NODE_ENV=production
