--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^5.5.0",
     "axios": "^1.7.9",
     "framer-motion": "^11.16.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-confetti": "^6.2.2",
