--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^7.1.1",
     "recharts": "^2.15.1",
     "zustand": "^5.0.3"
