--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
     "@stripe/stripe-js": "^5.5.0",
     "axios": "^1.7.9",
     "framer-motion": "^11.16.1",
